1. 工作区功能添加 2. 字典数据cache反序列化问题解决